--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 # { Datasource }
 #===============
-spring.datasource.url=jdbc:mysql://localhost:3308/nandanaMotors
+spring.datasource.url=jdbc:mysql://localhost:3306/nandanamotors
 spring.datasource.username=root
 spring.datasource.password=12345
 # { Hikari properties }
